--- a/forms/sanitize/css/style.css
+++ b/forms/sanitize/css/style.css
@@ -20,12 +20,16 @@ body {
   padding-right: 50px;
 }
 
-#data {
-  margin-top: 20px;
-}
-
 .error:focus {
-  border:1px solid #f00;
+  border:1px solid #ff4136;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,0,50,.6);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,0,50,.6);
+}
+
+.required-input {
+  color: #ff4136;
+}
+
+#data {
+  margin-top: 20px;
 }
