stub out dummy data for viz

--- a/data-viz/basic/css/responsive.css
+++ b/data-viz/basic/css/responsive.css
@@ -5,7 +5,12 @@
 @media (min-width: 768px) {}
 
 /* Medium devices (desktops, 992px and up) */
-@media (min-width: 992px) {}
+@media (max-width: 992px) {
+  .chart {
+    width: 600px;
+    height: 500px;
+  }
+}
 
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {}
