--- a/hello-world/hello-anim/css/style.css
+++ b/hello-world/hello-anim/css/style.css
@@ -2,8 +2,6 @@ body {
   padding-top: 60px;
 }
 
-#green {
-  background: green;
-  border-radius: 50%;
-  display: inline-block;
+#main {
+  /*background-image: url('../img/circles.png');*/
 }
